# how-to-sdpa

./: CMakeLists.txt  README.md
cmake/: FindSDPA.cmake
docker/: Dockerfile  build-docker.sh  run-docker.sh
src/: example1.cpp  example1_wikipedia.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp
